--- a/_posts/2023-08-31-Snake.md
+++ b/_posts/2023-08-31-Snake.md
@@ -20,8 +20,8 @@ courses: { compsci: {week: 2} }
     canvas{
         display: none;
         border-style: solid;
-        border-width: 10px;
-        border-color: #FFFFFF;
+        border-width: 35px;
+        border-color: #FFD7E7;
     }
     canvas:focus{
         outline: none;
@@ -67,8 +67,8 @@ courses: { compsci: {week: 2} }
     }
 
     #setting input:checked + label{
-        background-color: #FFF;
-        color: #000;
+        background-color: #FFD7E7;
+        color: #FFD7E7;
     }
 </style>
 
@@ -104,6 +104,8 @@ courses: { compsci: {week: 2} }
                 <label for="speed2">Normal</label>
                 <input id="speed3" type="radio" name="speed" value="35"/>
                 <label for="speed3">Fast</label>
+                <input id="speed4" type="radio" name="speed" value="10"/>
+                <label for="speed4">Faster</label>
             </p>
             <p>Wall:
                 <input id="wallon" type="radio" name="wall" value="1" checked/>
@@ -332,7 +334,7 @@ courses: { compsci: {week: 2} }
         /* Dot for Food or Snake part */
         /////////////////////////////////////////////////////////////
         let activeDot = function(x, y){
-            ctx.fillStyle = "#FFFFFF";
+            ctx.fillStyle = "#53E3D4";
             ctx.fillRect(x * BLOCK, y * BLOCK, BLOCK, BLOCK);
         }
         /* Random food placement */
@@ -367,8 +369,8 @@ courses: { compsci: {week: 2} }
         /////////////////////////////////////////////////////////////
         let setWall = function(wall_value){
             wall = wall_value;
-            if(wall === 0){screen_snake.style.borderColor = "#606060";}
-            if(wall === 1){screen_snake.style.borderColor = "#FFFFFF";}
+            if(wall === 0){screen_snake.style.borderColor = "#FFD7E7";}
+            if(wall === 1){screen_snake.style.borderColor = "#FFD7E7";}
         }
     })();
 </script>
