--- a/_posts/2023-08-31-Snake.md
+++ b/_posts/2023-08-31-Snake.md
@@ -105,7 +105,7 @@ courses: { compsci: {week: 2} }
                 <input id="speed3" type="radio" name="speed" value="35"/>
                 <label for="speed3">Fast</label>
                 <input id="speed4" type="radio" name="speed" value="10"/>
-                <label for="speed4">Faster</label>
+                <label for="speed4">Nonvisable </label>
             </p>
             <p>Wall:
                 <input id="wallon" type="radio" name="wall" value="1" checked/>
